fix: dashboard header overflow

--- a/apps/web/app/dashboard/layout.module.scss
+++ b/apps/web/app/dashboard/layout.module.scss
@@ -10,18 +10,25 @@
 .header_mock {
    height: $dashboard-header-height;
    width: $dashboard-children_width;
+   border-bottom: 1px solid;
+
    @media only screen and (max-width: $breakpoint-dashboard-shift) {
       width: $dashboard-children_width-md;
    }
-
    @media only screen and (max-width: $breakpoint-sm) {
       width: $dashboard-children_width-sm;
    }
-   border-bottom: 1px solid;
 }
 .child_container {
    padding: 0.85rem 1.5rem;
-   width: 100%;
    height: $dashboard-child-height;
+   width: $dashboard-children_width;
    overflow-y: scroll;
+
+   @media only screen and (max-width: $breakpoint-dashboard-shift) {
+      width: $dashboard-children_width-md;
+   }
+   @media only screen and (max-width: $breakpoint-sm) {
+      width: $dashboard-children_width-sm;
+   }
 }
